changes in layout

--- a/JAGUARETE/templates/jaguarete/layout.html
+++ b/JAGUARETE/templates/jaguarete/layout.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <p>header</p>
+        <p>Jaguareté</p>
     </header>
     {% block body %}
     {% endblock %}
     <footer>
-        <p>footer</p>
+        <p>Leila Sosa González</p>
     </footer>
 </body>
 </html>
