--- a/JAGUARETE/templates/jaguarete/layout.html
+++ b/JAGUARETE/templates/jaguarete/layout.html
@@ -1,19 +1,79 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="{% static 'jaguarete/styles.css' %}" />
     <title>Jaguarete</title>
 </head>
 <body>
-    <header>
-        <p>Jaguareté</p>
-    </header>
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger px-3">
+        <a class="navbar-brand" href="#">
+            <img src="{% static 'jaguarete/images/logo4.png' %}" alt="logo" class="logo mr-2">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item mr-2 active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropdown mr-2">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categorías</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+                </li>
+                <li class="nav-item mr-2">
+                    <a class="nav-link" href="#">Acerca de</a>
+                </li>
+                <li class="nav-item mr-2">
+                    <a class="nav-link" href="#">Contacto</a>
+                </li>
+        </ul>
+        <form class="form-inline my-2 mr-4 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-light my-2 my-sm-0" type="submit"><i class="fas fa-search pr-2"></i>Buscar</button>
+        </form>
+        <ul class="navbar-nav ">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Login</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Registro</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="#"><span><i class="fas fa-shopping-cart pr-2"></i></span></a>
+            </li>
+        </ul>
+        </div>
+    </nav>
     {% block body %}
     {% endblock %}
-    <footer>
-        <p>Leila Sosa González</p>
+    <footer class="bg-danger px-3">
+        <div class="row footer align-items-center justify-content-center">
+            <div class="col-md-6 d-flex logo-footer justify-content-center align-items-center">
+                <img src="{% static 'jaguarete/images/logo4.png' %}" alt="logo" class="pr-3">
+                <p class="text-white mt-3">Jaguarete</p>
+            </div>
+            <div class="col-md-6 d-flex d-flex justify-content-center align-items-center">
+                <p class="text-white pt-3">Copyright © 2021 Jaguarete Kaa S.A. <span class="pl-3">|</span></p>
+                <p class="text-white pl-3 pt-3">Leila Sosa González</p>
+            </div>
+        </div>
     </footer>
+    <!-- bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
