--- a/JAGUARETE/templates/jaguarete/layout.html
+++ b/JAGUARETE/templates/jaguarete/layout.html
@@ -13,7 +13,7 @@
 <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger px-3">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{% url 'JAGUARETE:index'%}">
             <img src="{% static 'jaguarete/images/logo4.png' %}" alt="logo" class="logo mr-2">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,53 +22,55 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item mr-2 active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'JAGUARETE:index'%}">Home</a>
                 </li>
                 <li class="nav-item dropdown mr-2">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categorías</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Categoria 1</a>
+                    <a class="dropdown-item" href="#">Categoria 2</a>
+                    <a class="dropdown-item" href="#">Categoria 3</a>
                 </div>
                 </li>
                 <li class="nav-item mr-2">
-                    <a class="nav-link" href="#">Acerca de</a>
+                    <a class="nav-link" href="{% url 'JAGUARETE:about'%}">Acerca de</a>
                 </li>
                 <li class="nav-item mr-2">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="{% url 'JAGUARETE:contact'%}">Contacto</a>
                 </li>
-        </ul>
-        <form class="form-inline my-2 mr-4 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit"><i class="fas fa-search pr-2"></i>Buscar</button>
-        </form>
-        <ul class="navbar-nav ">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Login</a>
+                <li class="nav-item mr-2">
+                    <a class="nav-link" href="{% url 'JAGUARETE:product_add'%}">Nuevo producto</a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 mr-4 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-light my-2 my-sm-0" type="submit"><i class="fas fa-search pr-2"></i>Buscar</button>
+            </form>
+            <ul class="navbar-nav ">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'JAGUARETE:login'%}">Login</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'JAGUARETE:register'%}">Registro</a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Registro</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="#"><span><i class="fas fa-shopping-cart pr-2"></i></span></a>
-            </li>
-        </ul>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#"><span><i class="fas fa-shopping-cart pr-2"></i></span></a>
+                </li>
+            </ul>
         </div>
     </nav>
     {% block body %}
     {% endblock %}
     <footer class="bg-danger px-3">
         <div class="row footer align-items-center justify-content-center">
-            <div class="col-md-6 d-flex logo-footer justify-content-center align-items-center">
+            <div class="col-12 d-flex logo-footer justify-content-center align-items-center">
                 <img src="{% static 'jaguarete/images/logo4.png' %}" alt="logo" class="pr-3">
                 <p class="text-white mt-3">Jaguarete</p>
             </div>
-            <div class="col-md-6 d-flex d-flex justify-content-center align-items-center">
-                <p class="text-white pt-3">Copyright © 2021 Jaguarete Kaa S.A. <span class="pl-3">|</span></p>
-                <p class="text-white pl-3 pt-3">Leila Sosa González</p>
-            </div>
+        </div>
+        <div class="row flex-column align-items-center justify-content-center pt-3">
+                <p class="text-white">Copyright © 2021 Jaguarete Kaa S.A.</p>
+                <p class="text-white">Leila Sosa González</p>
         </div>
     </footer>
     <!-- bootstrap -->
