--- a/JAGUARETE/static/jaguarete/styles.css
+++ b/JAGUARETE/static/jaguarete/styles.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
 :root {
     --primary: #dc3545;
-    --background: #fafafa;
+    /*--background: #fafafa;*/
+    --background: #fff;
 }
 body {
     background-color: var(--background);
