--- a/JAGUARETE/static/jaguarete/styles.css
+++ b/JAGUARETE/static/jaguarete/styles.css
@@ -1,18 +1,37 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nanum+Gothic:wght@400;700&display=swap');
 :root {
     --primary: #dc3545;
-    /*--background: #fafafa;*/
     --background: #fff;
 }
 body {
     background-color: var(--background);
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Nanum Gothic', sans-serif;
 }
-.logo {
-    width: 30px;
+a {
+    color: #000;
+}
+a:hover {
+    color: var(--primary);
+    text-decoration: none;
+}
+.product-link:hover {
+    color: var(--primary);
+    text-decoration: none;
+}
+.navbar-brand {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 20px;
+}
+.navbar-dark .navbar-nav .nav-link {
+    font-size: 16px;
 }
 .footer p {
     font-size: 12px;
+}
+.footer .logo {
+    color: #fff;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 20px;
 }
 .logo-footer img {
     width: 8vh;
