--- a/JAGUARETE/templates/jaguarete/cart.html
+++ b/JAGUARETE/templates/jaguarete/cart.html
@@ -3,45 +3,32 @@
 {% if not user.is_superuser %}
 <div class="container py-5">
     <div class="row pb-5 justify-content-center">
-        <h1>Carrito</h1>
+        <h1>Carrito de {{user.username}}</h1>
     </div>
-    <div class="row pb-3">
-        <h3 class="mb-3">Usuario</h3>
-        <div class="col-12">
-            
+    <div class="row d-flex flex-column align-items-center justify-content-center pb-3">
+        <div class="col-md-6">
+
             <div class="card">
                 <div class="card-body row justify-content-between">
-                    <p class="ml-3 mt-3">Producto 1</p>
+                    <p class="ml-3 mt-3">{{product.title}}</p>
                     <div class="row">
-                        <p class="font-weight-bold mr-5 mt-3">$100</p>
+                        <p class="font-weight-bold mr-5 mt-3">$ {{product.price}}</p>
                         <button class="btn btn-danger mr-3"><i class="fas fa-times"></i></button>
                     </div>
                     
                 </div>
             </div>
-        </div>
-    </div>
-    <!--<div class="row justify-content-center">
-        <div class="col-md-4 d-flex align-items-center justify-content-center">
-            {% load static %} <img src="{% static 'jaguarete/images/producto3.png' %}" alt="" class=" img-responsive">
-        </div>
-        <div class="col-md-6 d-flex flex-column justify-content-between">
-            <p class="text-uppercase pb-2">Categoría: {{product.category}}</p>
-            <p>{{product.description}}</p>
-            <div class="d-flex row justify-content-between align-items-center">
-                <div class="col-6 pt-3">
-                    <p class="font-weight-bold">$ {{product.price}}</p>
+
+            <div class="row mt-5">
+                <div class="col-6">
+                    <button class="btn btn-outline-danger btn-block">Vaciar carrito</button>
                 </div>
                 <div class="col-6">
-                    {% if user.is_authenticated %}
-                    <button class="btn btn-danger btn-block">Agregar al carrito</button>
-                    {% else %}
-                    <a class="btn btn-danger btn-block" href="{% url 'login' %}">Agregar al carrito</a>
-                    {% endif %}
+                    <button class="btn btn-danger btn-block">Finalizar compra</button>
                 </div>
             </div>
         </div>
-    </div>-->
+    </div>
 </div>
 {% endif %}
 {% endblock %}
